2019-12-17 Wiley E. Hill <wileyhill@gmail.com>

    * include/libgeda/geda_picture.h: Add height and width to retain the as
      loaded dimensions of pictures;

    * src/geda/geda_picture.c: Add getter and setter functions:

          * geda_picture_get_height
          * geda_picture_set_height

    * src/object/o_picture_object.c: Reverse terms in geda_picture_object_new
      so that picture->ratio is not the quotient of two negative factor, and
      set the new height and width members.

2019-12-02 Wiley E. Hill <wileyhill@gmail.com>

    * src/math: Add Doxygen group:

          * src/math/m_angle.c math-angle-proc
          * src/math/m_arc.c   math-arc-proc
          * src/math/m_box.c   math-box-proc

    * src/math/m_bounds.c: Add brief Doxygen file tag.

    * src/math/m_line.c: Update function wrapping.

    * src/object/o_embed.c: Reformat documentation block.

    * src/object/o_list.c: Add missing punctuations in documentation,
      update geda_object_list_rotate parameter documentation.

2019-11-29 Wiley E. Hill <wileyhill@gmail.com>

    * tests/test_arc_math.c: Add random checks for geda_math_arc_shortest_distance.
      This should complete the tests for this module.

    * tests/test_line_object.c: Add for loop to check_methods and random
      starting points.

    * tests/test_math.c: Add skelton module to check m_math.c.

    * tests/test_object_list.c: Fix incorrect object reference in checks for
      check_object_list_scale: object3 -> object6, and add check with for
      scaling net object.

2019-11-01 Wiley E. Hill <wileyhill@gmail.com>

    * src/object/o_circle_object.c: Add Doxygen group geda-circle-object-proc.

    * src/object/o_pin_object.c: Add Doxygen group geda-pin-object-proc.

2019-10-25 Wiley E. Hill <wileyhill@gmail.com>

    * src/geda/geda_toplevel.c: Revise geda_toplevel_remove_page to set
      page_current to NULL if the page being removed was also page_current.

2019-10-24 Wiley E. Hill <wileyhill@gmail.com>
